2011-02-20  Ivan Maidanski  <ivmai@mail.ru> (mostly really Elijah Taylor)

	* gc_dlopen.c: Empty unit for NaCl.
	* os_dep.c: Include fcntl.h for NaCl.
	* os_dep.c (GC_get_main_stack_base): Ignore
	USE_GET_STACKBASE_FOR_MAIN macro for NaCl.
	* os_dep.c (GC_get_stack_base): Return GC_UNIMPLEMENTED for NaCl.
	* os_dep.c (GC_remap): Use mmap (instead of mprotect) for NaCl.
	* pthread_start.c (GC_inner_start_routine): Don't invoke
	pthread_cleanup_push/pop for NaCl.
	* pthread_stop_world.c (GC_nacl_num_gc_threads,
	GC_nacl_thread_idx, GC_nacl_park_threads_now,
	GC_nacl_thread_parker, GC_nacl_gc_thread_self,
	GC_nacl_thread_parked, GC_nacl_thread_used,
	GC_nacl_thread_parking_inited, GC_nacl_thread_alloc_lock): New
	variable (fo NaCl only).
	* pthread_stop_world.c (GC_suspend_handler): Reformat the code.
	* pthread_stop_world.c (GC_remove_allowed_signals,
	suspend_handler_mask, GC_stop_count, GC_world_is_stopped,
	GC_retry_signals, SIG_THR_RESTART, GC_suspend_ack_sem,
	GC_restart_ack_sem, GC_suspend_handler_inner, GC_suspend_handler,
	GC_restart_handler): Don't define for NaCl.
	* pthread_support.c (GC_get_nprocs): Ditto.
	* include/private/gc_priv.h (SIG_SUSPEND): Ditto.
	* include/private/gcconfig.h (LINUX): Ditto.
	* pthread_stop_world.c (GC_push_all_stacks): Push register storage
	for NaCl.
	* pthread_stop_world.c (GC_suspend_all, GC_stop_world,
	GC_start_world): Implement for NaCl.
	* pthread_stop_world.c (GC_stop_world): Don't define unused "i"
	local variable for OpenBSD (and NaCl).
	* pthread_stop_world.c (NACL_STORE_REGS): New macro definition for
	NaCl.
	* pthread_stop_world.c (nacl_pre_syscall_hook,
	__nacl_suspend_thread_if_needed, nacl_post_syscall_hook,
	GC_nacl_initialize_gc_thread, GC_nacl_shutdown_gc_thread): New
	function (for NaCl only).
	* pthread_stop_world.c (GC_stop_init): Empty for NaCl.
	* pthread_support.c (pthread_cancel, pthread_sigmask): Don't
	redirect for NaCl.
	* include/gc_pthread_redirects.h (pthread_cancel,
	pthread_sigmask): Ditto.